fix the bug with displaying expand/collapse icons in wrong elements in IE6 - test #79

--- a/project/media/styles/ie.css
+++ b/project/media/styles/ie.css
@@ -4,7 +4,7 @@
 }
 
 .index-filters .filter dd label {
-  width: 144px;
+  width: 140px;
 }
 
 .advanced-search .filter dd.collapsible li label {
@@ -23,4 +23,9 @@
 
 .navigation li span {
   float: left;
+}
+
+.index-filters .filter dd,
+a.expand-link {
+  background: none !important;
 }
